--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+// Add this to your global styles.scss or in the component if you prefer
+@import '~bootstrap-icons/font/bootstrap-icons.css'; 
