--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<main>
-    <router-outlet></router-outlet>
-</main>
+<div class="main-content">
+  <router-outlet></router-outlet>
+</div>
