--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 // Add this to your global styles.scss or in the component if you prefer
 @import '~bootstrap-icons/font/bootstrap-icons.css'; 
+// src/styles.scss
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/mixins";
+
+// Your global custom variables and styles here
+
+// Import the rest of Bootstrap
+@import "bootstrap/scss/bootstrap";
