--- a/src/app/rule-details/rule-details.component.html
+++ b/src/app/rule-details/rule-details.component.html
@@ -61,7 +61,7 @@
                 <i class="bi bi-pencil-square"></i>
               </button>
               <button *ngIf="row.isEditing" class="btn btn-icon" (click)="saveRow(row)">
-                <i class="bi bi-save2"></i>
+                <i class="bi-floppy-fill"></i>
               </button>
             </div>
           </td>
@@ -129,7 +129,7 @@
               <i class="bi bi-pencil-square"></i>
             </button>
             <button *ngIf="row.isEditing" class="btn btn-icon" (click)="saveRow(row)">
-              <i class="bi bi-save2"></i>
+              <i class="bi-floppy-fill"></i>
             </button>
           </div>
         </td>
